test/Fail/Issue2642.err
Issue2642.agda:5.5-6.6: error: [DuplicateFields]
Duplicate field F in record
when scope checking the declaration
  record R where
    field
      F : Set
      F : Set
